--- a/styles/custom.css
+++ b/styles/custom.css
@@ -38,8 +38,10 @@ h3, h4, h5, h6 {line-height:1.5 !important}
 }
 
 /* MM */
-.tableOfMeasurements  { text-align: right; border: 1px solid #ccc; }
+.tableOfMeasurements  { text-align: right; border: 1px solid #ccc; margin-right: 5em;}
 .tableOfMeasurements th, td {padding-right: 10px; border: 1px solid #ccc;}
+.channelValue { font-size:55px; color:#aaaaaa; text-align: right; margin: 15px 100px 20px 55px; float:left;}
+
 
 /* Contact */
 
